fixed squished avatars on homepage

--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -14,7 +14,6 @@
 .h-card img,
 .conversation img {
   max-width:  100px;
-  max-height: 100px;
 }
 
 .h-card .p-name {
